# rdkservices

MemMonitor/: CMakeLists.txt  MemMonitor.config  MemMonitor.cpp  MemMonitor.h  MemMonitor.json  Module.h  README.md
OCIContainer/: CMakeLists.txt  OCIContainer.cpp  OCIContainer.h
RDKShell/: RDKShell.cpp  RDKShell.h
RIoTControl/: AvahiClient.cpp  CMakeLists.txt  RIoTConnector.cpp  RIoTConnector.h  RIoTControl.config  RIoTControl.cpp  RIoTControl.h  RIoTControl.json  RIoTControlPlugin.json
SwitchBoard/: CMakeLists.txt  SwitchBoard.cpp  SwitchBoard.h  SwitchBoard.json
